# tempgauge

./: .gitignore  README.md  flake.nix  main.py  parse_temps.py  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: ci.yml  docs.yml  python-app.yml  release.yml
gauge/: core.py  equations.py
resources/: sensors-no-label.txt  sensors-with-label.txt
src/: core.py  equations.py  piecewise.py
tempgauge/: __init__.py  __main__.py  core.py  equations.py  parse_temps.py
temps/: __init__.py  __main__.py  core.py  equations.py
tests/: test_core.py  test_equations.py  test_import.py  test_parse_temps.py  test_piecewise.py
