[tool.poetry]
name = "tempgauge"
version = "1.0.1"
description = "Analyzes CPU temperature readings over time"
authors = ["TonyGrif <TonyGriffin2000@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "gauge"},
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
tox = "^4.15.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
black = "^24.4.2"
isort = "^5.13.2"
pylint = "^3.2.2"
ruff = "^0.4.4"
flake8-pyproject = "^1.2.3"
poethepoet = "^0.26.1"

[tool.poetry.group.docs.dependencies]
pdoc = "^15.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = "True"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E701"]

[tool.tox]
legacy_tox_ini = """
    [tox]
    requires =
        tox>=4
    env_list = py{39, 310, 311, 312}
    isolated_build = true

    [testenv]
    description = Run the PyTest Suite.
    skip_install = true
    deps = poetry
    commands_pre =
        poetry install --only main,test
    commands =
        poetry run poe test
"""

[tool.poe.tasks]
test = "pytest --cov --cov-report term-missing"
docs = "pdoc gauge/ --docformat google"
pubdocs = "pdoc gauge/ -o docs/ --docformat google"
_black = "black main.py gauge/ tests/"
_isort = "isort main.py gauge/ tests/"
format = ["_black", "_isort"]
_mypy = "mypy main.py gauge/"
_pylint = "pylint main.py gauge"
_ruff = "ruff check main.py gauge/"
_flake = "flake8 main.py gauge/"
lint = ["_mypy", "_pylint", "_ruff", "_flake"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
