[project]
name = "tempgauge"
version = "1.0.1"
description = "Analyzes CPU temperature readings over time"
authors = [
    {name = "TonyGrif",email = "TonyGriffin2000@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy (>=1.26.4,<2.0.0)"
]

[tool.poetry]
packages = [
    {include = "gauge"},
]

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
tox = "^4.27.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
black = "^25.1.0"
isort = "^6.0.1"
pylint = "^3.3.7"
ruff = "^0.12.1"
flake8-pyproject = "^1.2.3"
poethepoet = "^0.36.0"

[tool.poetry.group.docs.dependencies]
pdoc = "^15.0.4"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E701"]

[tool.tox]
legacy_tox_ini = """
    [tox]
    requires =
        tox>=4
    env_list = py{39, 310, 311, 312}
    isolated_build = true

    [testenv]
    description = Run the PyTest Suite.
    skip_install = true
    deps = poetry
    commands_pre =
        poetry install --only main,test
    commands =
        poetry run poe test
"""

[tool.poe.tasks]
test = "pytest --cov --cov-report term-missing"
docs = "pdoc gauge/ --docformat google"
pubdocs = "pdoc gauge/ -o docs/ --docformat google"
_black = "black main.py gauge/ tests/"
_isort = "isort main.py gauge/ tests/"
format = ["_black", "_isort"]
_mypy = "mypy main.py gauge/"
_pylint = "pylint main.py gauge"
_ruff = "ruff check main.py gauge/"
_flake = "flake8 main.py gauge/"
lint = ["_mypy", "_pylint", "_ruff", "_flake"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
