[project]
name = "tempgauge"
version = "1.1.0"
description = "Analyzes CPU temperature readings over time"
authors = [
    {name = "TonyGrif",email = "TonyGriffin2000@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "numpy (>=2.2.6,<3)"
]

[tool.poetry]
packages = [
    {include = "tempgauge"},
]

[project.scripts]
tempgauge = "tempgauge.__main__:main"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
tox = "^4.54.0"

[tool.poetry.group.dev.dependencies]
mypy = "^2.1.0"
ruff = "^0.15.13"
poethepoet = "^0.46.0"

[tool.poetry.group.docs.dependencies]
pdoc = "^16.0.0"

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP"]

[tool.tox]
legacy_tox_ini = """
    [tox]
    requires =
        tox>=4
    env_list = py{310, 311, 312, 313, 314}
    isolated_build = true

    [testenv]
    description = Run the PyTest Suite.
    skip_install = true
    deps = poetry
    commands_pre =
        poetry install --only main,test
    commands =
        poetry run poe test
"""

[tool.poe.tasks]
test = "pytest --cov --cov-report term-missing"
docs = "pdoc tempgauge/ --docformat google"
pubdocs = "pdoc tempgauge/ -o docs/ --docformat google"
format = "ruff format tempgauge/ tests/"
_mypy = "mypy tempgauge/"
_ruff = "ruff check tempgauge/ tests/"
lint = ["_mypy", "_ruff"]

[build-system]
requires = ["poetry-core>=2.4.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
